Add email contact to footer in index.html

--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
   </main>
 
   <footer class="site-footer">
+    <p>📧<i> ligadedadosuninassau@gmail.com</i></p>
     <p>© <span id="year"></span> LIAD — História Sonora</p>
   </footer>
 
