Adicionado botão de questionário

--- a/index.html
+++ b/index.html
@@ -57,7 +57,11 @@
   </main>
 
   <footer class="site-footer">
-    <p>© <span id="year"></span> LIAD — História Sonora</p>
+
+    <p>📧<i> ligadedadosuninassau@gmail.com </i></p>
+    <p>© <span id="year"></span> LIAD — História Sonora. Desenvolvido por Lucas Barbosa Lins</p>
+    <a href="https://forms.gle/9j4ohV7nR7DVxLLZA" target="_blank" class="botao-feedback">
+    ❓ Ajude-nos a Melhorar: Pesquisa de Feedback</a></p>
   </footer>
 
   <script src="app.js"></script>
